# kuboble-rs

./: .gitignore  Cargo.toml  LICENSE  Notes.org  README.md  assets
kuboble-core/: Cargo.toml
kuboble-core/src/: levels.rs  lib.rs  render.rs
kuboble-core/src/board/: mod.rs  render.rs
kuboble-core/src/level_run/: mod.rs  render.rs
kuboble-core/src/level_select/: mod.rs  render.rs
kuboble-pc/: Cargo.toml
kuboble-pc/src/: board.rs  level_run.rs  level_select.rs  main.rs
kuboble-pygamer/: Cargo.toml
kuboble-pygamer/.cargo/: config.toml
kuboble-pygamer/src/: controls.rs  display.rs  main.rs  output.rs  panic.rs  renderer.rs
kuboble-simulator/: Cargo.toml
kuboble-simulator/src/: main.rs
level-converter/: Cargo.toml  levels.json  optimal_moves.json
level-converter/src/: main.rs
pygamer-engine/: Cargo.toml
pygamer-engine/src/: display.rs  level_run.rs  level_select.rs  lib.rs
