[workspace]
# This is excluded because it evidently cannot be compiled as a package in the workspace because it is `no_std`.
# Doing so raises an error about panic unwinding and it is unclear how to prevent this.
exclude = ["kuboble-pygamer"]
members = [
  "kuboble-core",
  "kuboble-pc",
]
resolver = "2"
