[package]
edition = "2021"
name = "kuboble-core"
version = "0.1.0"

[dependencies]
arrayvec = {version = "0.7.6", default-features = false, features = ["serde"]}
# Waiting for pull request: https://github.com/JENebel/const_for/pull/3
const_for = {version = "0.1", git = "https://github.com/kyp44/const_for.git"}
#const_for = "0.1"
itertools = {version = "0.13.0", default-features = false}
serde = {version = "1.0.209", default-features = false, features = ["derive"]}
strum = {version = "0.26.3", default-features = false, features = ["derive"]}

[features]
std = []
