[package]
edition = "2021"
name = "kuboble-core"
version = "0.1.0"

[dependencies]
arrayvec = {version = "0.7.6", default-features = false, features = ["serde"]}
const_for = "0.1.5"
derive-new = "0.7.0"
enum-map = "2.7.3"
itertools = {version = "0.13.0", default-features = false}
lazy_static = {version = "1.5.0", features = ["spin_no_std"]}
serde = {version = "1.0.214", default-features = false, features = ["derive"]}
strum = {version = "0.26.3", default-features = false, features = ["derive"]}

[features]
std = []
unlocked = []
