[package]
edition = "2021"
name = "kuboble-pygamer"
version = "0.1.0"

[dependencies]
derive-new = "0.5"
embedded-graphics = "0.7"
embedded-graphics-core = "0.3"
heapless = "0.8"
kuboble-core = {path = "../kuboble-core"}
pygamer = {version = "0.9", features = ["panic_led"]}
smart-leds = "0.3"
st7735-lcd = "0.8"

[profile.dev]
debug = true 
incremental = false 
lto = "thin" # thin for debug speed
opt-level = 2 # uncomment for neopixel functionality during debug

[profile.release]
lto = "fat"
opt-level = 's'
