[package]
edition = "2021"
name = "kuboble-pygamer"
version = "0.1.0"

[patch.crates-io]
atsamd-hal = {path = "../../atsamd/hal"}
pygamer = {path = "../../atsamd/boards/pygamer"}

[dependencies]
atsamd-hal = {version = "0.18.0", features = ["dma"]}
derive-new = "0.7.0"
embedded-graphics = "0.8.1"
kuboble-core = {path = "../kuboble-core"}
pygamer = {version = "0.11.0", features = ["panic_led"]}
pygamer-engine = {path = "../pygamer-engine"}
smart-leds = "0.3.0"
st7735-lcd = "0.10.0"
ws2812-timer-delay = "0.3.0"

[features]
unlocked = ["kuboble-core/unlocked"]

[profile.dev]
debug = true 
incremental = false 
lto = "thin" # thin for debug speed
opt-level = 2 # uncomment for neopixel functionality during debug

[profile.release]
lto = "fat"
opt-level = 's'
