[package]
edition = "2021"
name = "kuboble-pygamer"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
derive-new = "0.7.0"
kuboble-core = {path = "../kuboble-core"}
pygamer = {version = "0.13.1", features = ["neopixel-spi"]}
pygamer-engine = {path = "../pygamer-engine"}
smart-leds = "0.4.0"
st7735-lcd = "0.10.0"
ws2812-spi = {version = "0.5", features = ["mosi_idle_high"]}

[features]
unlocked = ["kuboble-core/unlocked"]

[profile.dev]
debug = true 
incremental = false 
lto = "thin" # thin for debug speed
opt-level = 2 # uncomment for neopixel functionality during debug

[profile.release]
lto = "fat"
opt-level = 's'
