[package]
edition = "2021"
name = "kuboble-simulator"
version = "0.1.0"

[dependencies]
anyhow = "1.0.91"
derive-new = "0.7.0"
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.7.0"
kuboble-core = {path = "../kuboble-core"}
pygamer-engine = {path = "../pygamer-engine"}
serde_json = "1.0.132"

[features]
unlocked = ["kuboble-core/unlocked"]
