[package]
edition = "2021"
name = "level-converter"
version = "0.1.0"

[dependencies]
anyhow = "1.0.94"
clap = {version = "4.5.23", features = ["derive"]}
euclid = "0.22.11"
grid = "0.15.0"
itertools = "0.13.0"
kuboble-core = {path = "../kuboble-core", features = ["std"]}
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.133"
strum = "0.26.3"
