[package]
edition = "2021"
name = "pygamer-engine"
version = "0.1.0"

[dependencies]
arrayvec = {version = "0.7.6", default-features = false}
derive-new = "0.7.0"
embedded-graphics = "0.7"
embedded-graphics-framebuf = "0.2"
embedded-sprites = "0.1.2"
kuboble-core = {path = "../kuboble-core"}
#strum = {version = "0.26.3", default-features = false}
